pulsante contact us ancora da sistemare

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puck&Co. • Hockey per Giovani Campioni</title>
-    <link rel="icon" href="assets/img/puck&co_favicon.png">
+   
     <style>
         /* Footer privacy link in basso a destra */
         .footer-privacy-link {
@@ -502,9 +502,11 @@
             <span class="close-modal" id="closeModal">&times;</span>
             <h4 id="email-modal-title">Contact Us</h4>
             <p id="email-modal-instructions">Copy the email address below to send us a message:</p>
-            <p class="email-address"><a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#58;&#109;&#121;&#64;&#x70;&#x75;&#x63;&#107;&#x61;&#110;&#100;&#x63;&#111;&#x2e;&#99;&#111;&#109;">
-          &#x6d;&#x79;&#x40;&#x70;&#x75;&#x63;&#x6b;&#x61;&#x6e;&#x64;&#x63;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;
-      </a></p>
+            <p class="email-address" style="color: #2b75a9; background-color: #ffffff; padding: 0.5rem; border-radius: 4px;">
+                <a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#58;&#109;&#121;&#64;&#x70;&#x75;&#x63;&#107;&#x61;&#x6e;&#x64;&#x63;&#x6f;&#x2e;&#99;&#111;&#109;" style="color: inherit; text-decoration: none;">
+                    &#x6d;&#x79;&#x40;&#x70;&#x75;&#x63;&#x6b;&#x61;&#x6e;&#x64;&#x63;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;
+                </a>
+            </p>
             <button class="copy-btn" id="copyEmail">Copy Email</button>
         </div>
     </div>
