cancelleto  mailto: da email-address

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@
             transition: all 0.2s ease;
             font-family: 'Fredoka', sans-serif;
             margin-top: 1rem;
+            width: 150px; /* Ensure consistent width */
+            text-align: center;
         }
 
         .copy-btn:hover {
@@ -522,9 +524,9 @@
             <span class="close-modal" id="closeModal">&times;</span>
             <h4 id="email-modal-title">Contact Us</h4>
             <p id="email-modal-instructions">Copy the email address below to send us a message:</p>
-            <p class="email-address"><a href="&#109;&#x61;&#105;&#108;&#116;&#111;&#58;&#109;&#121;&#64;&#x70;&#x75;&#x63;&#107;&#x61;&#110;&#100;&#x63;&#111;&#x2e;&#99;&#111;&#109;">
-          &#x6d;&#x79;&#x40;&#x70;&#x75;&#x63;&#x6b;&#x61;&#x6e;&#x64;&#x63;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;
-      </a></p>
+            <p class="email-address" style="color: #2b75a9; background-color: #ffffff; padding: 0.5rem; border-radius: 4px;">
+                &#x6d;&#x79;&#x40;&#x70;&#x75;&#x63;&#x6b;&#x61;&#x6e;&#x64;&#x63;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;
+            </p>
             <button class="copy-btn" id="copyEmail">Copy Email</button>
         </div>
     </div>
