--- a/books.html
+++ b/books.html
@@ -5,465 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books • Puck&Co.</title>
     <link rel="icon" href="assets/img/puck&co_favicon.png">
-    <style>
-        /* === COPIA ESATTA DEL TUO CSS DA INDEX.HTML === */
-        .footer-privacy-link {
-          position: absolute;
-          right: 2.5rem;
-          bottom: 2.5rem;
-          font-size: 0.95rem;
-          color: var(--primary-blue);
-          text-decoration: underline;
-          cursor: pointer;
-          z-index: 10;
-        }
-        @media (max-width: 600px) {
-          .footer-privacy-link {
-            right: 1.2rem;
-            bottom: 1.2rem;
-            font-size: 0.9rem;
-          }
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        :root { --primary-blue:#3182bc; --gold:#D4AF37; --snow-white:#FFFFFF; --ice-gray:#F0F8FF; --light-gray:#E6F2FF; --dark-text:#2D3748; }
-        :root { --header-height: 88px; }
-        html { height:100%; }
-        body { font-family:'Inter',sans-serif; background:var(--snow-white); color:var(--dark-text); line-height:1.6; min-height:100vh; display:flex; flex-direction:column; overflow-y:scroll; }
-        .container { max-width:1200px; margin:0 auto; padding:0 2rem; }
-        .responsive-img { width: 100%; height: auto; display: block; max-width: 100%; }
-        .header { background:var(--snow-white); box-shadow:0 2px 15px rgba(49,130,188,.2); position:sticky; top:0; z-index:100; height:var(--header-height); overflow:hidden; }
-        .header-container { display:flex; justify-content:space-between; align-items:center; padding:0 2rem; height:100%; }
-        .logo { display:flex; align-items:center; gap:1rem; text-decoration:none; height:100%; align-items:center; }
-        .nav { display:flex; gap:2rem; }
-        .nav a { color:var(--dark-text); text-decoration:none; font-weight:600; transition:all .2s ease; position:relative; }
-        .nav a:hover { color:var(--primary-blue); transform:translateY(-1px); }
-        .nav a[aria-current="page"] { color:var(--primary-blue); font-weight:700; }
-        .nav a::after { content:''; position:absolute; bottom:-8px; left:0; width:0; height:2px; background:var(--primary-blue); transition:width .2s ease; }
-        .nav a:hover::after, .nav a[aria-current="page"]::after { width:100%; }
-        .language-selector { position:relative; transform:translateY(10px); width: 80px; }
-        .language-static { display:flex; align-items:center; gap:.5rem; font-weight:700; color:var(--dark-text); }
-        .language-static img { width:20px; height:15px; vertical-align:middle; }
-        .language-selector { position: relative; }
-        #language-toggle { display:flex; align-items:center; gap:.5rem; background:transparent; border:1px solid transparent; padding:.25rem .5rem; border-radius:.5rem; cursor:pointer; font-weight:700; }
-        #language-toggle .lang-flag { width:20px; height:15px; }
-        #language-list { position:absolute; right:0; top:calc(100% + .5rem); background:var(--snow-white); border:1px solid rgba(0,0,0,.08); box-shadow:0 8px 24px rgba(0,0,0,.08); border-radius:.5rem; list-style:none; padding:.25rem 0; margin:0; display:none; min-width:160px; z-index:1200; }
-        #language-list[aria-hidden="false"], #language-list.show { display:block; }
-        .lang-item { padding:.5rem 1rem; display:flex; align-items:center; gap:.5rem; cursor:pointer; white-space:nowrap; border-radius:1rem; transition: background .12s ease, transform .08s ease, box-shadow .12s ease; }
-        .lang-item:hover, .lang-item:focus { background:var(--ice-gray); box-shadow: 0 8px 18px rgba(0,0,0,0.06); }
-        .lang-item:active { transform: translateY(1px); }
-        .lang-item.selected { font-weight:700; }
-        @media (max-width:768px){ #language-list { right: 1rem; left: 1rem; min-width: auto; } }
-        .hero { padding:6rem 0; background:linear-gradient(135deg, var(--ice-gray) 0%, var(--snow-white) 100%); position:relative; overflow:hidden; }
-        .hero::before { content:''; position:absolute; top:-50px; right:-50px; width:200px; height:200px; background:var(--gold); border-radius:50%; opacity:.1; }
-        .hero::after { content:''; position:absolute; bottom:-80px; left:-80px; width:300px; height:300px; background:var(--primary-blue); border-radius:50%; opacity:.05; }
-        .hero h1 { font-family:'Fredoka',sans-serif; font-size:3.5rem; font-weight:700; line-height:1.1; margin-bottom:1.5rem; color:var(--dark-text); letter-spacing:-1px; }
-        .hero h1 span { color:var(--primary-blue); }
-        .hero p { font-size:1.25rem; color:var(--dark-text); margin-bottom:2.5rem; font-weight:400; opacity:.9; }
-        .hero-buttons { display:flex; gap:1.5rem; }
-        .btn { padding:1rem 2.5rem; border-radius:2rem; font-weight:600; text-decoration:none; display:inline-block; font-size:1.1rem; transition:all .3s ease; text-align:center; border:2px solid transparent; }
-        .btn-primary { background:var(--primary-blue); color:var(--snow-white); box-shadow:0 6px 15px rgba(49,130,188,.4); }
-        .btn-primary:hover { background:#256a99; transform:translateY(-3px); box-shadow:0 10px 25px rgba(49,130,188,.6); }
-        .btn-secondary { background:transparent; color:var(--primary-blue); border-color:var(--primary-blue); }
-        .btn-secondary:hover { background:var(--primary-blue); color:var(--snow-white); transform:translateY(-3px); box-shadow:0 10px 25px rgba(49,130,188,.4); }
-        footer { background:var(--dark-text); color:var(--snow-white); padding:3rem 0; text-align:center; margin-top:auto; }
-        .footer-content { max-width:600px; margin:0 auto; position: relative; }
-        .footer-logo { display:flex; align-items:center; justify-content:center; gap:1rem; margin-bottom:1.5rem; }
-        .footer-logo img {
-            max-width: 150px;
-            height: auto;
-        }
-        .footer-text { font-size:.95rem; opacity:.8; font-weight:400; }
-        .footer-wrapper { position: relative; }
-        .privacy-container { position: absolute; right: 1.5rem; bottom: 1.25rem; }
-        .privacy-container .footer-privacy-link { display: inline-block; color: var(--snow-white); padding: 0; text-decoration: none; font-weight: 400; cursor: pointer; white-space: nowrap; }
-        @media (max-width: 768px) {
-          .privacy-container { position: static; margin-top: 1rem; text-align: center; }
-          .privacy-container .footer-privacy-link { border-radius: .6rem; }
-        }
-        main { flex: 1 0 auto; }
-        #site-header { min-height: 88px; }
-        @media (max-width: 768px) { #site-header { min-height: 120px; } }
-        @media (max-width:480px){
-          .container { padding:0 1.5rem; }
-          .hero { padding:4rem 0; }
-        }
-
-        /* === STILI SPECIFICI PER BOOKS === */
-        .books-page {
-          padding: 4rem 0 2rem;
-        }
-        .books-layout {
-          display: flex;
-          gap: 2.5rem;
-        }
-        @media (max-width: 900px) {
-          .books-layout {
-            flex-direction: column;
-          }
-        }
-        .categories-sidebar {
-          width: 280px;
-          flex-shrink: 0;
-        }
-        @media (max-width: 900px) {
-          .categories-sidebar {
-            width: 100%;
-          }
-        }
-        .category-item {
-          margin-bottom: 1.25rem;
-        }
-        .category-header {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.25rem;
-          font-weight: 700;
-          color: var(--dark-text);
-          padding: 0.75rem 0;
-          cursor: pointer;
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          border-bottom: 1px solid var(--light-gray);
-        }
-        .category-header:hover {
-          color: var(--primary-blue);
-        }
-        .category-header::after {
-          content: "▶";
-          color: var(--primary-blue);
-          font-size: 0.9rem;
-          transition: transform 0.2s ease;
-        }
-        .category-item.open .category-header::after {
-          transform: rotate(90deg);
-        }
-        .subcategories,
-        .sub-subcategories,
-        .sub-sub-subcategories,
-        .sub-sub-sub-subcategories {
-          list-style: none;
-          padding-left: 1.25rem;
-          max-height: 0;
-          overflow: hidden;
-          transition: max-height 0.4s ease;
-        }
-        .category-item.open .subcategories { max-height: 500px; }
-        .sub-subcategories.open { max-height: 400px; }
-        .sub-sub-subcategories.open { max-height: 300px; }
-        .sub-sub-sub-subcategories.open { max-height: 200px; }
-
-        .subcategory-link,
-        .sub-sub-link,
-        .sub-sub-sub-link {
-          display: block;
-          padding: 0.4rem 0;
-          color: var(--dark-text);
-          text-decoration: none;
-          font-weight: 500;
-          font-size: 0.95rem;
-          transition: color 0.2s ease;
-        }
-        .subcategory-link:hover,
-        .sub-sub-link:hover,
-        .sub-sub-sub-link:hover,
-        .subcategory-link.active,
-        .sub-sub-link.active,
-        .sub-sub-sub-link.active {
-          color: var(--primary-blue);
-          font-weight: 600;
-        }
-
-        .subcategory-header,
-        .sub-sub-header {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          padding: 0.5rem 0;
-          cursor: pointer;
-          color: var(--dark-text);
-          font-weight: 500;
-        }
-        .submenu-toggle {
-          color: var(--primary-blue);
-          font-size: 0.8rem;
-          transition: transform 0.2s ease;
-        }
-
-        .books-content {
-          flex: 1;
-        }
-        .books-banner {
-          width: 100%;
-          height: 200px;
-          margin-bottom: 2.5rem;
-          border-radius: 1.25rem;
-          overflow: hidden;
-          box-shadow: 0 6px 18px rgba(0,0,0,0.12);
-        }
-        .books-banner img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          display: block;
-        }
-        .books-slider,
-        .books-grid-section {
-          margin-bottom: 2.5rem;
-        }
-        .slider-title {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.5rem;
-          margin-bottom: 1.25rem;
-          color: var(--dark-text);
-        }
-        .books-grid {
-          display: grid;
-          grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-          gap: 1.75rem;
-        }
-        .book-card {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between; /* Ensures spacing between elements */
-          background: var(--snow-white);
-          border-radius: 1.25rem;
-          overflow: hidden;
-          box-shadow: 0 5px 15px rgba(0,0,0,0.08);
-          transition: transform 0.3s ease, box-shadow 0.3s ease;
-          text-align: center;
-        }
-        .book-card:hover {
-          transform: translateY(-5px);
-          box-shadow: 0 12px 25px rgba(0,0,0,0.15);
-        }
-        .book-card img {
-          width: 100%;
-          aspect-ratio: 3/4;
-          object-fit: cover;
-          display: block;
-        }
-        .book-card h4 {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.1rem;
-          padding: 1rem 0.75rem 0.5rem;
-          color: var(--dark-text);
-        }
-        .book-card .btn {
-          padding: 0.5rem 1rem; /* Further reduced horizontal padding to make the button narrower */
-          font-size: 0.95rem;
-          margin: 0 0.5
-          rem 1rem;
-          margin-top: auto; /* Pushes the button to the bottom */
-          margin-bottom: 0.5rem; /* Keeps it 0.5rem from the bottom edge */
-        }
-        .book-card .book-description {
-          padding: 0 0.75rem;
-          font-size: 0.9rem;
-          color: var(--dark-text);
-          margin-bottom: 0.5rem;
-          display: -webkit-box;
-          -webkit-box-orient: vertical;
-          -webkit-line-clamp: 3;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          line-clamp: 3; /* Standard property for compatibility */
-        }
-
-        /* === MODALE DETTAGLIO LIBRO === */
-        .book-detail-modal {
-          display: none;
-          position: fixed;
-          z-index: 3000;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          background: rgba(0,0,0,0.7);
-          overflow: auto;
-        }
-        .modal-content {
-          background: var(--snow-white);
-          margin: 5% auto;
-          padding: 2rem;
-          border-radius: 1.5rem;
-          width: 90%;
-          max-width: 1000px;
-          box-shadow: 0 20px 50px rgba(0,0,0,0.4);
-          position: relative;
-          animation: modalFadeIn 0.4s ease;
-        }
-        @keyframes modalFadeIn {
-          from { opacity: 0; transform: translateY(20px); }
-          to { opacity: 1; transform: translateY(0); }
-        }
-        .close-modal {
-          position: absolute;
-          top: 1.25rem;
-          right: 1.25rem;
-          font-size: 1.8rem;
-          font-weight: bold;
-          color: var(--dark-text);
-          cursor: pointer;
-          transition: color 0.2s;
-        }
-        .close-modal:hover { color: var(--primary-blue); }
-
-        .modal-body {
-          display: flex;
-          gap: 2rem;
-        }
-        @media (max-width: 768px) {
-          .modal-body { flex-direction: column; }
-        }
-
-        .modal-image-section {
-          flex: 1;
-          text-align: center;
-          position: relative;
-        }
-        .main-image {
-          width: 100%;
-          max-height: 400px;
-          object-fit: contain;
-          border-radius: 1rem;
-          box-shadow: 0 10px 30px rgba(0,0,0,0.15);
-          margin-bottom: 1rem;
-          transition: opacity 0.3s ease;
-        }
-        .gallery-nav {
-          position: absolute;
-          top: 50%;
-          transform: translateY(-50%);
-          background: rgba(0,0,0,0.5);
-          color: white;
-          border: none;
-          width: 40px;
-          height: 40px;
-          border-radius: 50%;
-          cursor: pointer;
-          font-size: 18px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          transition: all 0.2s ease;
-        }
-        .gallery-nav:hover {
-          background: rgba(0,0,0,0.7);
-          transform: translateY(-50%) scale(1.1);
-        }
-        .gallery-nav.prev {
-          left: 10px;
-        }
-        .gallery-nav.next {
-          right: 10px;
-        }
-        .image-counter {
-          position: absolute;
-          bottom: 10px;
-          right: 15px;
-          background: rgba(0,0,0,0.6);
-          color: white;
-          padding: 4px 8px;
-          border-radius: 12px;
-          font-size: 0.85rem;
-          font-weight: 500;
-        }
-        .thumbnails {
-          display: flex;
-          gap: 0.75rem;
-          justify-content: center;
-          flex-wrap: wrap;
-          margin-top: 1rem;
-        }
-        .thumbnail {
-          width: 80px;
-          height: 80px;
-          object-fit: cover;
-          border-radius: 0.75rem;
-          cursor: pointer;
-          border: 3px solid transparent;
-          transition: all 0.3s ease;
-          box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-        .thumbnail:hover {
-          border-color: var(--gold);
-          transform: scale(1.1);
-          box-shadow: 0 6px 20px rgba(0,0,0,0.2);
-        }
-        .thumbnail.active {
-          border-color: var(--primary-blue);
-          transform: scale(1.08);
-          box-shadow: 0 6px 20px rgba(49,130,188,0.3);
-        }
-        .thumbnail.active:hover {
-          border-color: var(--primary-blue);
-          transform: scale(1.12);
-        }
-
-        .modal-info-section {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-        }
-        .modal-title {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.8rem;
-          color: var(--dark-text);
-          margin-bottom: 1rem;
-        }
-        .modal-description {
-          font-size: 1.05rem;
-          line-height: 1.7;
-          margin-bottom: 1.5rem;
-          color: var(--dark-text);
-        }
-        .modal-meta {
-          background: var(--ice-gray);
-          padding: 1.25rem;
-          border-radius: 1rem;
-          margin-bottom: 1.5rem;
-        }
-        .modal-meta h4 {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.1rem;
-          margin-bottom: 0.5rem;
-          color: var(--primary-blue);
-        }
-        .modal-meta p {
-          margin: 0;
-          font-size: 1rem;
-          color: var(--dark-text);
-        }
-        .modal-amazon-btn {
-          align-self: flex-start;
-          padding: 0.75rem 2rem;
-          font-size: 1.1rem;
-          background: var(--primary-blue);
-          color: white;
-          text-decoration: none;
-          border-radius: 2rem;
-          font-weight: 600;
-          transition: all 0.3s;
-          display: inline-block;
-        }
-        .modal-amazon-btn:hover {
-          background: #256a99;
-          transform: translateY(-2px);
-          box-shadow: 0 6px 15px rgba(49,130,188,0.4);
-        }
-        .featured-detail-btn {
-          background: var(--primary-blue) !important;
-          color: #fff !important;
-          border: 2px solid var(--primary-blue) !important;
-          transition: all 0.2s;
-        }
-        .featured-detail-btn:hover {
-          background: transparent !important;
-          color: var(--primary-blue) !important;
-          border: 2px solid var(--primary-blue) !important;
-        }
-    </style>
+<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     <!-- Header -->
