--- a/index.html
+++ b/index.html
@@ -5,411 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puck&Co. • Hockey per Giovani Campioni</title>
    
-    <style>
-        /* Footer privacy link in basso a destra */
-        .footer-privacy-link {
-          position: absolute;
-          right: 2.5rem;
-          bottom: 2.5rem;
-          font-size: 0.95rem;
-          color: var(--primary-blue);
-          text-decoration: underline;
-          cursor: pointer;
-          z-index: 10;
-        }
-        @media (max-width: 600px) {
-          .footer-privacy-link {
-            right: 1.2rem;
-            bottom: 1.2rem;
-            font-size: 0.9rem;
-          }
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        :root { --primary-blue:#3182bc; --gold:#D4AF37; --snow-white:#FFFFFF; --ice-gray:#F0F8FF; --light-gray:#E6F2FF; --dark-text:#2D3748; }
-        /* Fixed header height for stable layout */
-        :root { --header-height: 88px; }
-        html { height:100%; }
-        /* Ensure the body fills the viewport and footer can stick to bottom */
-        body { font-family:'Inter',sans-serif; background:var(--snow-white); color:var(--dark-text); line-height:1.6; min-height:100vh; display:flex; flex-direction:column; overflow-y:scroll; }
-        .container { max-width:1200px; margin:0 auto; padding:0 2rem; }
-
-        /* Utility responsive images: use class="responsive-img" on <img> */
-        .responsive-img { width: 100%; height: auto; display: block; max-width: 100%; }
-
-        /* Header */
-        .header { background:var(--snow-white); box-shadow:0 2px 15px rgba(49,130,188,.2); position:sticky; top:0; z-index:100; height:var(--header-height); overflow:hidden; }
-        .header-container { display:flex; justify-content:space-between; align-items:center; padding:0 2rem; height:100%; }
-        .logo { display:flex; align-items:center; gap:1rem; text-decoration:none; height:100%; align-items:center; }
-        .nav { display:flex; gap:2rem; }
-        .nav a { color:var(--dark-text); text-decoration:none; font-weight:600; transition:all .2s ease; position:relative; }
-        .nav a:hover { color:var(--primary-blue); transform:translateY(-1px); }
-        .nav a[aria-current="page"] { color:var(--primary-blue); font-weight:700; }
-        .nav a::after { content:''; position:absolute; bottom:-8px; left:0; width:0; height:2px; background:var(--primary-blue); transition:width .2s ease; }
-        .nav a:hover::after, .nav a[aria-current="page"]::after { width:100%; }
-
-        /* Language selector */
-        .language-selector { position:relative; transform:translateY(10px); width: 80px; /* Larghezza fissa per il contenitore */ }
-        .language-static { display:flex; align-items:center; gap:.5rem; font-weight:700; color:var(--dark-text); }
-        .language-static img { width:20px; height:15px; vertical-align:middle; }
-
-        /* Language selector dropdown */
-        .language-selector { position: relative; }
-        #language-toggle { display:flex; align-items:center; gap:.5rem; background:transparent; border:1px solid transparent; padding:.25rem .5rem; border-radius:.5rem; cursor:pointer; font-weight:700; }
-        #language-toggle .lang-flag { width:20px; height:15px; }
-        #language-list { position:absolute; right:0; top:calc(100% + .5rem); background:var(--snow-white); border:1px solid rgba(0,0,0,.08); box-shadow:0 8px 24px rgba(0,0,0,.08); border-radius:.5rem; list-style:none; padding:.25rem 0; margin:0; display:none; min-width:160px; z-index:1200; }
-        #language-list[aria-hidden="false"], #language-list.show { display:block; }
-        .lang-item { padding:.5rem 1rem; display:flex; align-items:center; gap:.5rem; cursor:pointer; white-space:nowrap; border-radius:1rem; transition: background .12s ease, transform .08s ease, box-shadow .12s ease; }
-        .lang-item:hover, .lang-item:focus { background:var(--ice-gray); box-shadow: 0 8px 18px rgba(0,0,0,0.06); }
-        .lang-item:active { transform: translateY(1px); }
-        .lang-item.selected { font-weight:700; }
-
-        @media (max-width:768px){
-          #language-list { right: 1rem; left: 1rem; min-width: auto; }
-        }
-
-        /* Hero */
-        .hero { padding:6rem 0; background:linear-gradient(135deg, var(--ice-gray) 0%, var(--snow-white) 100%); position:relative; overflow:hidden; }
-        .hero::before { content:''; position:absolute; top:-50px; right:-50px; width:200px; height:200px; background:var(--gold); border-radius:50%; opacity:.1; }
-        .hero::after { content:''; position:absolute; bottom:-80px; left:-80px; width:300px; height:300px; background:var(--primary-blue); border-radius:50%; opacity:.05; }
-        .hero h1 { font-family:'Fredoka',sans-serif; font-size:3.5rem; font-weight:700; line-height:1.1; margin-bottom:1.5rem; color:var(--dark-text); letter-spacing:-1px; }
-        .hero h1 span { color:var(--primary-blue); }
-        .hero p { font-size:1.25rem; color:var(--dark-text); margin-bottom:2.5rem; font-weight:400; opacity:.9; }
-        .hero-buttons { display:flex; gap:1.5rem; }
-
-        /* Buttons */
-        .btn { padding:1rem 2.5rem; border-radius:2rem; font-weight:600; text-decoration:none; display:inline-block; font-size:1.1rem; transition:all .3s ease; text-align:center; border:2px solid transparent; }
-        .btn-primary { background:var(--primary-blue); color:var(--snow-white); box-shadow:0 6px 15px rgba(49,130,188,.4); }
-        .btn-primary:hover { background:#256a99; transform:translateY(-3px); box-shadow:0 10px 25px rgba(49,130,188,.6); }
-        .btn-secondary { background:transparent; color:var(--primary-blue); border-color:var(--primary-blue); }
-        .btn-secondary:hover { background:var(--primary-blue); color:var(--snow-white); transform:translateY(-3px); box-shadow:0 10px 25px rgba(49,130,188,.4); }
-
-        /* Features */
-        .features { padding:6rem 0; background:var(--snow-white); }
-        .section-header { text-align:center; margin-bottom:4rem; }
-        .section-header h2 { font-family:'Fredoka',sans-serif; font-size:2.5rem; font-weight:700; color:var(--dark-text); margin-bottom:1rem; letter-spacing:-.5px; }
-        .section-header p { font-size:1.125rem; color:var(--dark-text); max-width:600px; margin:0 auto; font-weight:400; opacity:.8; }
-        .features-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(280px,1fr)); gap:2.5rem; }
-        .feature-card { background:var(--ice-gray); padding:2.5rem; border-radius:1.5rem; text-align:center; transition:all .3s ease; border:2px solid transparent; box-shadow:0 5px 15px rgba(49,130,188,.1); }
-        .feature-card:hover { transform:translateY(-8px); box-shadow:0 20px 40px rgba(49,130,188,.2); border-color:var(--primary-blue); }
-        .feature-icon { width:80px; height:80px; background:linear-gradient(135deg, var(--primary-blue), #256a99); border-radius:50%; display:flex; align-items:center; justify-content:center; margin:0 auto 1.5rem; color:var(--snow-white); font-size:2rem; font-weight:bold; box-shadow:0 8px 20px rgba(49,130,188,.3); }
-        .feature-card h3 { font-family:'Fredoka',sans-serif; font-size:1.5rem; font-weight:600; margin-bottom:1rem; color:var(--dark-text); letter-spacing:-.3px; }
-        .feature-card p { color:var(--dark-text); font-weight:400; opacity:.85; }
-
-        /* --- Valori rinnovati --- */
-        .values {
-          padding: 5rem 0;
-          background: linear-gradient(135deg, var(--primary-blue) 0%, #2a73a6 100%);
-          color: var(--snow-white);
-          position: relative;
-          overflow: hidden;
-        }
-
-        .values::before {
-          content: '';
-          position: absolute;
-          top: -100px;
-          right: -100px;
-          width: 300px;
-          height: 300px;
-          background: radial-gradient(circle, var(--gold) 0%, transparent 70%);
-          opacity: 0.08;
-          z-index: 0;
-        }
-
-        .values .section-header {
-          position: relative;
-          z-index: 1;
-          margin-bottom: 3.5rem;
-        }
-
-        .values .section-header h2 {
-          color: var(--snow-white);
-          font-size: 2.25rem;
-          letter-spacing: -0.5px;
-        }
-
-        .values .section-header p {
-          color: rgba(255, 255, 255, 0.9);
-          max-width: 600px;
-          margin: 0 auto;
-          font-size: 1.125rem;
-        }
-
-        /* Griglia a 2 colonne fisse */
-        .values-grid {
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          gap: 2rem;
-          max-width: 900px;
-          margin: 0 auto;
-          position: relative;
-          z-index: 1;
-        }
-
-        .value-card {
-          background: rgba(255, 255, 255, 0.08);
-          backdrop-filter: blur(10px);
-          border: 1px solid rgba(255, 255, 255, 0.2);
-          border-radius: 1.25rem;
-          padding: 2rem;
-          text-align: center;
-          transition: all 0.35s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-          box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
-
-        .value-card:hover {
-          transform: translateY(-6px);
-          background: rgba(255, 255, 255, 0.12);
-          border: 1px solid rgba(45, 55, 72, 0.2);
-          box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-        }
-
-        .value-icon {
-          font-size: 2.8rem;
-          margin-bottom: 1.25rem;
-          color: var(--gold);
-          display: inline-block;
-          transition: transform 0.3s ease, text-shadow 0.3s ease;
-        }
-
-        .value-card:hover .value-icon {
-          transform: scale(1.15);
-          text-shadow: 0 0 15px rgba(212, 175, 55, 0.6);
-        }
-
-        .value-card h4 {
-          font-family: 'Fredoka', sans-serif;
-          font-size: 1.35rem;
-          font-weight: 700;
-          margin-bottom: 1rem;
-          letter-spacing: -0.3px;
-          color: var(--snow-white);
-        }
-
-        .value-card p {
-          font-size: 1rem;
-          opacity: 0.92;
-          line-height: 1.6;
-          font-weight: 400;
-        }
-
-        /* Mobile: mantieni 2 colonne fino a schermi molto piccoli */
-        @media (max-width: 480px) {
-          .values-grid {
-            gap: 1.5rem;
-            padding: 0 1rem;
-          }
-
-          .value-card {
-            padding: 1.75rem;
-          }
-
-          .value-card h4 {
-            font-size: 1.25rem;
-          }
-
-          .value-icon {
-            font-size: 2.4rem;
-          }
-        }
-
-        /* Contact */
-        .contact { padding:6rem 0; background:var(--light-gray); text-align:center; }
-        .contact-container { max-width:600px; margin:0 auto; }
-        .contact-info { margin-bottom:2rem; }
-        .contact-info h3 { font-family:'Fredoka',sans-serif; font-size:1.75rem; font-weight:600; margin-bottom:1rem; color:var(--dark-text); letter-spacing:-.3px; }
-        .contact-info p { color:var(--dark-text); margin-bottom:1rem; font-weight:400; opacity:.9; }
-
-        /* Modal */
-        .modal { display:none; position:fixed; z-index:2000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,.5); }
-        .modal-content { background:var(--snow-white); margin:10% auto; padding:2.5rem; border-radius:1.5rem; width:90%; max-width:500px; box-shadow:0 20px 50px rgba(0,0,0,.3); position:relative; text-align:center; border:2px solid var(--primary-blue); }
-        .close-modal { position:absolute; top:1rem; right:1.5rem; font-size:1.5rem; font-weight:bold; color:var(--dark-text); cursor:pointer; transition:color .2s ease; }
-        .close-modal:hover { color:var(--gold); }
-        .email-content h4 { font-family:'Fredoka',sans-serif; font-size:1.5rem; font-weight:600; margin-bottom:1.5rem; color:var(--dark-text); }
-        .email-address { font-family:'Fredoka',sans-serif; font-size:1.3rem; font-weight:600; color:var(--primary-blue); margin:1rem 0; word-break:break-all; }
-        .email-instructions { color:var(--dark-text); opacity:.8; margin-bottom:1.5rem; font-weight:400; }
-        .copy-btn {
-            background: #ffd700;
-            color: #2d3748;
-            border: none;
-            padding: 0.75rem 1.5rem;
-            border-radius: 1rem;
-            font-weight: 700;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            font-family: 'Fredoka', sans-serif;
-            margin-top: 1rem;
-            width: 150px; /* Ensure consistent width */
-            text-align: center;
-        }
-
-        .copy-btn:hover {
-            background: #ffd700;
-            transform: translateY(-2px);
-        }
-
-        .copy-btn.copied {
-            background: #4caf50;
-            color: #ffffff;
-        }
-
-        /* Footer */
-        footer {
-            background: var(--dark-text);
-            color: var(--snow-white);
-            padding: 2rem 1rem; /* Ridotto il padding per schermi piccoli */
-            text-align: center;
-        }
-
-        .footer-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Adattabile a schermi piccoli */
-            gap: 1rem;
-            align-items: center;
-        }
-
-        .footer-logo img {
-            max-width: 150px; /* Dimensione massima per il logo */
-        }
-
-        .footer-text {
-            font-size: 0.9rem;
-            opacity: 0.8;
-        }
-
-        .privacy-container {
-            text-align: center;
-            margin-top: 1rem;
-        }
-
-        .privacy-container .footer-privacy-link {
-            color: var(--snow-white);
-            text-decoration: underline;
-            font-size: 0.85rem;
-        }
-
-        /* privacy link placed to the right of the footer (outside its box) */
-        .footer-wrapper { position: relative; }
-        .footer-wrapper { position: relative; }
-        .privacy-container { position: absolute; right: 1.5rem; bottom: 1.25rem; transform: none; transition: none; }
-        .privacy-container .footer-privacy-link { display: inline-block; color: var(--snow-white); padding: 0; text-decoration: none; font-weight: 400; cursor: pointer; white-space: nowrap; }
-
-        /* Ensure the privacy text is always visible and clickable */
-        .footer-wrapper { overflow: visible; }
-        .footer-wrapper .privacy-container { pointer-events: auto; }
-        .footer-wrapper .privacy-container .footer-privacy-link {
-          color: var(--snow-white) !important;
-          z-index: 9999 !important;
-          text-shadow: 0 1px 2px rgba(0,0,0,0.6);
-          background: transparent !important;
-        }
-
-        @media (max-width: 768px) {
-          .privacy-container { position: static; transform: none; margin-top: 1rem; text-align: center; }
-          .privacy-container .footer-privacy-link { border-radius: .6rem; }
-        }
-        .modal-content { padding:2rem; margin:15% auto; }
-        .footer-grid { display: grid; grid-template-columns: 20% 60% 20%; align-items: center; gap: 1rem; }
-
-        /* Privacy modal specific adjustments were removed per request */
-        .footer-left { text-align: left; }
-        .footer-center { text-align: center; display:flex; flex-direction:column; align-items:center; gap:0.5rem; }
-        .footer-right { text-align: right; position: relative; }
-        .footer-right .footer-privacy-link { position: absolute; right: 0; bottom: 0; color: var(--snow-white); text-decoration: none; }
-
-        @media (max-width: 768px) {
-          .footer-grid { grid-template-columns: 1fr; text-align: center; }
-          .footer-right .footer-privacy-link { position: static; margin-top: 0.75rem; }
-        }
-        .privacy-container { max-width: none; overflow: visible; text-overflow: clip; }
-
-        /* Override finale per garantire visibilità dentro il footer */
-        .footer-wrapper .privacy-container .footer-privacy-link {
-          position: absolute !important;
-          right: 1rem !important;
-          bottom: 1rem !important;
-          color: var(--snow-white) !important;
-          z-index: 1100 !important;
-          white-space: nowrap !important;
-        }
-
-        /* Responsive */
-        @media (max-width:768px){
-          .hero h1 { font-size:2.5rem; }
-          .hero p { font-size:1.125rem; }
-          .hero-buttons { flex-direction:column; gap:1rem; }
-          .header-container { flex-direction:column; gap:1.5rem; }
-        }
-
-        /* Make main expand so footer stays at bottom */
-        main { flex: 1 0 auto; }
-
-        /* Reserve space for header include to avoid layout shift while fragments load */
-        #site-header { min-height: 88px; }
-        @media (max-width: 768px) {
-          /* header stacks vertically on small screens; reserve more vertical space */
-          #site-header { min-height: 120px; }
-        }
-        /* Smooth reveal for header when dynamically injected */
-        #site-header > header { visibility: visible; opacity: 1; transition: opacity 160ms linear; }
-        #site-header { transition: height 160ms linear; }
-        @media (max-width:480px){
-          .container { padding:0 1.5rem; }
-          .hero { padding:4rem 0; }
-          .features, .values, .contact { padding:4rem 0; }
-          .hero h1 { font-size:2rem; }
-          .modal-content { padding:2rem; margin:15% auto; }
-        }
-
-        /* Disable body scroll when modal is open */
-        .modal-open {
-            overflow: hidden;
-            padding-right: calc(100vw - 100%); /* Add padding equal to scrollbar width */
-        }
-
-        /* Adjust modal height to prevent double scrollbars */
-        .modal {
-            height: 100vh; /* Use viewport height */
-        }
-
-        /* Ensure modal content fits within the viewport */
-        .modal-content {
-            max-height: 90vh; /* Ensure it fits within the viewport */
-            overflow-y: auto;
-        }
-
-        /* Ensure only one scrollbar in Privacy Policy modal (intentionally unused placeholder) */
-        /* #privacyModal { */
-        /*     Ripristino il codice originale (unused) */
-        /* } */
-
-        /* body.modal-open { */
-        /*     Rimuovo la classe aggiunta (unused) */
-        /* } */
-
-        /* Ensure only one scrollbar in Privacy Policy modal */
-        #privacyModal {
-            position: fixed; /* Forza il posizionamento per evitare scrollbar */
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            overflow: hidden; /* Blocca lo scorrimento del contenitore */
-        }
-
-    /* body.modal-open {
-       overflow: hidden;  -- disabled by design (placeholder)
-    } */
-
-        #privacyContent {
-            max-height: 60vh;
-            overflow-y: auto; /* Mantieni lo scorrimento solo sul contenuto */
-        }
-
-        iframe {
-            height: 100%; /* Match the parent container */
-        }
-    </style>
+<link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
